--- a/workflow-templates/octo-organization-ci.yml
+++ b/workflow-templates/octo-organization-ci.yml
@@ -1,10 +1,7 @@
 name: Octo Organization CI
 
 on:
-  push:
-    branches: [ $default-branch ]
-  pull_request:
-    branches: [ $default-branch ]
+  workflow_call:
 
 jobs:
   build:
